# capstone-wrapper

./: Cargo.toml  LICENSE  README
.cargo/: config.toml
enum-def/: Cargo.toml
enum-def/src/: lib.rs  test.rs
enum-generator/: Cargo.toml
enum-generator/src/: lib.rs
enum-visitor/: Cargo.toml
enum-visitor/src/: lib.rs
instruction-enum-generator/: Cargo.toml
instruction-enum-generator/resources/: x86.csv
instruction-enum-generator/src/: main.rs
instruction-enum-generator2/: Cargo.toml
instruction-enum-generator2/src/: main.rs
intel-pdf-parser/: Cargo.toml
intel-pdf-parser/src/: main.rs
k-semantics-json-minimize/: Cargo.toml
k-semantics-json-minimize/src/: main.rs
k-semantics-json-parser/: .gitattributes  Cargo.toml
k-semantics-json-parser/data/: formatted_parsed.json  minimized-ADCB-AL-IMM8.json  minimized-ANDB-M8-RH.json  minimized-ANDNPS-XMM-M128.json  minimized-CALLQ-M64.json  minimized-MOVQ-R64-R64.json  minimized-PBLENDVB-XMM-M128-XMM0.json  minimized-PEXTRW-M16-XMM-IMM8.json  minimized-VFMADD213SD-XMM-XMM-XMM.json  minimized.json
k-semantics-json-parser/src/: k_to_raw.rs  lib.rs  raw.rs  raw_to_typed.rs  test.rs  typed_semantics.rs  untyped_semantics.rs
k-semantics-json-parser/src/k_expressions/: mod.rs  test.rs
k-semantics-json-parser/src/k_to_raw/: extract_register_expression.rs  mod.rs  strip_dots.rs  utils.rs
k-semantics-json-parser/src/raw/: mod.rs  test.rs
k-semantics-parser/: Cargo.toml
k-semantics-parser/src/: lib.rs  parser.rs  tokenize.rs
llvm-ir-parse/: Cargo.toml
llvm-ir-parse/src/: main.rs
remill-semantics-parser/: .gitattributes  Cargo.toml
remill-semantics-parser/data/: Instructions.json  Instructions.json.short.zstd  all2.cpp
remill-semantics-parser/src/: clang_json_defs.rs  extract.rs  function_def_to_intermediate.rs  function_def_to_rust.rs  intermediate_to_rust.rs  lib.rs  unneeded_data_stripped.rs
semantics/: Cargo.toml
semantics/src/: lib.rs  test.rs  x86_machine.rs  xed_iform_safe.rs
semantics/src/iform_semantics/: PUNPCKLDQV.rs  iform_aaa.rs  iform_adc.rs  mod.rs
semantics/src/semantics2/: aaa.rs  aad.rs  adc.rs  adcx.rs  add.rs  addpd.rs  arena.rs  builder.rs  expression.rs  mod.rs  num_traits.rs  read_write.rs  semantic_steps.rs  state.rs  vaddpd.rs  value.rs  variables.rs
semantics/src/semantics2/test/: instruction_64.rs  mod.rs
semantics/src/x86_machine/: accessors.rs  concrete.rs  read_write.rs  semantics_builder.rs  values.rs
serde-enum-generator/: Cargo.toml
serde-enum-generator/src/: main.rs
src/: add_instruction.rs  jcc_instruction.rs  lib.rs  memory_operand.rs  mov_instruction.rs  push_instruction.rs  registers.rs  ret_instruction.rs  setb_instruction.rs  shl_instruction.rs  sub_instruction.rs  test_instruction.rs  tests.rs  utils.rs
string-concat-utils/: Cargo.toml
string-concat-utils/src/: lib.rs
uops-info/: Cargo.toml
uops-info/src/: lib.rs
wrapper-common/: Cargo.toml
wrapper-common/src/: generate_example_values.rs  instructions.rs  lib.rs  memory_operand.rs  operand_index.rs  operand_type.rs  operand_width.rs  operands.rs  registers.rs
xed-enum/: Cargo.toml
xed-enum-generator/: Cargo.toml
xed-enum-generator/src/: lib.rs
xed-enum/src/: lib.rs  test.rs
xed-table-parser/: Cargo.toml
xed-table-parser/data/: xed-table
xed-table-parser/src/: lib.rs
xed-wrapper/: Cargo.toml
xed-wrapper/src/: generate_example_values.rs  lib.rs  nonterminal_type.rs  operand_name.rs  operand_register.rs  operand_type.rs  operand_width.rs  operands.rs  temp.rs
