[package]
name = "capstone-wrapper"
version = "0.1.0"
edition = "2021"


[dependencies]
capstone = "0.11"
thiserror = "1"
itertools = "0.10"

[workspace]
members = [
    ".",
    "instruction-enum-generator",
    "instruction-enum-generator2",
    "enum-generator",
    "enum-def",
    "wrapper-common",
    "uops-info",
    "string-concat-utils",
    "intel-pdf-parser",
    "semantics",
    "xed-table-parser",
    "xed-wrapper",
    "xed-enum-generator",
    "xed-enum",
    "k-semantics-parser",
    "remill-semantics-parser",
    "k-semantics-json-parser",
    "k-semantics-json-minimize",
    "serde-enum-generator",
    "enum-visitor"
]


[profile.test]
opt-level = 2
debug = true
overflow-checks = false
lto = false
