[package]
name = "enum-def"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-generator = { path = "../enum-generator" }
wrapper-common = { path = "../wrapper-common" }
anyhow = "1"
capstone = "0.11"
clang-sys = { version = "1.6.1" }
xed-sys = { git = "https://github.com/rust-xed/xed-sys.git" }
itertools = "0.11.0"
