[package]
name = "enum-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
instruction-enum-generator2 = { path = "../instruction-enum-generator2" }
wrapper-common = { path = "../wrapper-common" }
bincode = "1"
itertools = "0.10"
string-concat-utils = { path = "../string-concat-utils" }
quote = "1"
