[package]
name = "instruction-enum-generator2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wrapper-common = { path = "../wrapper-common" }
uops-info = { path = "../uops-info" }
serde-xml-rs = "0.6"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
bincode = "1"
reqwest = { version = "0.11", features = ["blocking"] }
itertools = "0.10"
anyhow = "1"
