[package]
name = "intel-pdf-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdf = "0.8.1"
clap = "4"
serde = "1"
anyhow = "1"
pdf-extract = "0.6.5"
lopdf = "0.30"
regex = "1.8"
itertools = "0.10"