[package]
name = "k-semantics-json-minimize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k-semantics-json-parser = { path = "../k-semantics-json-parser" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
anyhow = "1"