[package]
name = "remill-semantics-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
hex = { version = "0.4", features = ["serde"] }
anyhow = "1"
derive-visitor = "0.3.0"
zstd = "0.12"
#enum-visitor = { path = "../enum-visitor"}