[package]
name = "semantics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xed-enum = { path = "../xed-enum" }
remill-semantics-parser = { path = "../remill-semantics-parser" }
wrapper-common = { path = "../wrapper-common" }
xed-wrapper = { path = "../xed-wrapper" }
bumpalo = "3.12"