[package]
name = "wrapper-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
uops-info = { path = "../uops-info" }
capstone = "0.11"
itertools = "0.10"
proc-macro2 = "1"
quote = "1"
xed-sys = { git = "https://github.com/rust-xed/xed-sys.git" }