[package]
name = "xed-enum-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xed-sys = { git = "https://github.com/rust-xed/xed-sys.git" }
quote = "1.0"
proc-macro2 = "1.0"
convert_case = "0.6.0"
itertools = "0.10"
wrapper-common = { path = "../wrapper-common" }
xed-wrapper = { path = "../xed-wrapper" }
enum-visitor = { path = "../enum-visitor" }
enum-iterator = "1.4.1"
[lib]
proc-macro = true
