[package]
name = "xed-enum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xed-enum-generator = { path = "../xed-enum-generator" }
wrapper-common = { path = "../wrapper-common" }
xed-wrapper = { path = "../xed-wrapper" }
#xed-sys = "0.4.0"
xed-sys = { git = "https://github.com/rust-xed/xed-sys.git" }
enum-visitor = { path = "../enum-visitor" }

[dev-dependencies]
capstone = "0.11.0"