[package]
name = "xed-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xed-sys = { git = "https://github.com/rust-xed/xed-sys.git" }
quote = "1"
proc-macro2 = "1"
wrapper-common = {path = "../wrapper-common"}